changed z-index orders of hero bg video elements to obscure correctly and be clickable

--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_hero-image.scss
@@ -20,6 +20,7 @@
     flex: 0;
     color: #ffffff;
     margin: auto 0;
+    z-index: 1;
     h1 {
       font-size: 3rem;
       @include media-breakpoint-up(md) {
@@ -46,6 +47,7 @@
     flex: 0;
     text-align: center;
     opacity: 0.7;
+    z-index: 1;
     &:hover {
       opacity: 1;
     }
@@ -68,6 +70,6 @@
   position: absolute;
   width: 100%;
   right: 0%;
-  z-index: 9;
+  z-index: 0;
   filter: opacity(30%) contrast(90%) brightness(80%);
 }
